# hackattic

./: Cargo.toml  README.md
backup_restore/: Cargo.toml
backup_restore/src/: docker.rs  lib.rs  main.rs
mini_miner/: Cargo.toml
mini_miner/src/: lib.rs  main.rs
utils/: Cargo.toml
utils/src/: lib.rs
