[package]
name = "backup_restore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
base64 = "0.21.2"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
tempfile = "3.7.0"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "process", "fs"] }
tokio-postgres = "0.7.8"
utils = { path = "../utils" }
